@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2009-06-10 Warren L. DeLano <warren@delsci.com>	
+
+	* updated the density wizard to reflect the current API
+
 2009-06-09 Warren L. DeLano <warren@delsci.com>	
 
 	* fixed rounding error bug with symmetry expansion of maps.
